fixed spacing for circle

--- a/public/assets/css/ceh2.css
+++ b/public/assets/css/ceh2.css
@@ -2797,7 +2797,7 @@
     }
     .wwyl-box {
         margin-bottom: 30px !important;
-        margin-top: 32px !important;
+        margin-top: 40px !important;
         background: #fff !important;
     }
     .acc__panel {
