--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3628,7 +3628,7 @@ body{
     width: 100%;
     }
     .wwyl-box-circle {
-    top: -24px;
+    top: -35px;
     left: 40%;
     width: 50px;
     height: 50px;
